# Bluetooth

./: .gitignore  README.md  install_flutter_android_wsl.sh  install_flutter_go_windows.ps1  install_uv_windows.ps1
bluetooth_client/: README.md  pubspec.yaml
bluetooth_client/android/app/: build.gradle.kts
bluetooth_client/android/app/src/main/: AndroidManifest.xml
bluetooth_client/android/app/src/main/kotlin/com/example/bluetooth_client/: MainActivity.kt
bluetooth_client/lib/: ble_helpers.dart  main.dart  rfcomm_helpers.dart
bluetooth_client/test/: ble_helpers_test.dart  rfcomm_helpers_test.dart  widget_test.dart
bluetooth_server/: README.md  go.mod  main.go  main_test.go  pyproject.toml
bluetooth_server/src/bluetooth_server/: __init__.py  ble_server.py  bt_server.py  cli.py  protocol.py  rfcomm_server.py
bluetooth_server/tests/: test_protocol.py
