[project]
name = "bluetooth-server"
version = "0.1.0"
description = "Windows Bluetooth Classic RFCOMM echo server for Flutter testing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "winrt-runtime>=3.1; sys_platform == 'win32'",
    "winrt-windows-devices-bluetooth>=3.1; sys_platform == 'win32'",
    "winrt-windows-devices-bluetooth-advertisement>=3.1; sys_platform == 'win32'",
    "winrt-windows-devices-bluetooth-genericattributeprofile>=3.1; sys_platform == 'win32'",
    "winrt-windows-foundation>=3.1; sys_platform == 'win32'",
    "winrt-windows-foundation-collections>=3.1; sys_platform == 'win32'",
    "winrt-windows-storage-streams>=3.1; sys_platform == 'win32'",
]

[project.scripts]
bt-server = "bluetooth_server.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
